--- a/02d_filenaming.qmd
+++ b/02d_filenaming.qmd
@@ -79,7 +79,7 @@ myabstract.docx
 Joe’s Filenames Use Spaces and Punctuation.xlsx
 figure 1.png
 fig 2.png
-JW7d^(2sl@deletethisandyourcareerisoverWx2*.txt
+JW7d^(2sl\@deletethisandyourcareerisoverWx2*.txt
 ~~~
 
 :::
