--- a/07b_github.qmd
+++ b/07b_github.qmd
@@ -21,11 +21,11 @@ lightbox: true
 
 ## Back up and sync through the cloud
 
-![Image: Jessica Lord, 2013 BSD](assets/remotes.png)
+![Image: Jessica Lord, 2013 BSD](assets/remotes.png){width="800"}
 
 ## Fork and contribute to other's work
 
-![Image: Jessica Lord, 2013 BSD](assets/clone.png)
+![Image: Jessica Lord, 2013 BSD](assets/clone.png){width="800"}
 
 ## **GitHub for science**
 
